mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/struct.stderr
error: unused `Struct` that must be used
 --> tests/failing_no_mass_cfg_attr/struct.rs:9:5
  |
9 |     Struct();
  |     ^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/failing_no_mass_cfg_attr/struct.rs:1:9
  |
1 | #![deny(unused_must_use, deprecated)]
  |         ^^^^^^^^^^^^^^^
